# journal-club-agent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  research.ipynb
src/clurb/: __init__.py  agents.py  cli.py  prompts.py  secrets.py  tools.py  ui.py
