[project]
name = "clurb"
version = "0.1.0"
description = "An AI agent to help with preparing for journal club."
readme = "README.md"
authors = [{ name = "Josh Cook", email = "joshuacook0023@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.5.3",
    "docling[easyocr]>=2.90.0",
    "jupyterlab>=4.5.6",
    "markdownify>=1.2.2",
    "pydantic>=2.13.3",
    "rich",
    "tavily-python>=0.7.23",
    "typer",
]

[project.scripts]
clurb = "clurb:cli.app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.ruff]

# Assume Python 3.10
target-version = "py314"

[tool.ruff.lint]
select = [
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "ARG",
    "PTH",
    "I",
    "N",
    "E",
    "W",
    "D",
    "F",
    "RUF",
]
ignore = ["D203", "D213", "COM812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"src/clurb/prompts.py" = ["E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
